# storymode

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STRUCTURE.md  README.md  environment.yml  pyproject.toml  requirements.txt
data/examples/labels/: 002.json
data/examples/reports/: 001.txt
docs/: README.md
examples/: README.md
examples/labels/: 001.json
examples/reports/: 002.txt
scripts/: install_dev.bat  install_dev.sh
src/storymode/: __init__.py  cli.py  decode.py  eval.py  extract.py  models.py  postprocess.py  prompt_templates.py  prompts.py  schema.py  utils.py
tests/: test_basic.py  test_validation.py
